5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1590_1015.log
== TEST (2019-03-29 11:04:45) 
-- CODE:
a = int(input("Qual o valor de a?"))
b = int(input("Qual o valor de b?"))
c = int(input("Qual o valor de c?"))
var = a + b + c
x = var - (min(a,b,c)) - max(a,b,c))

print(int(min(a,b,c)))
print(int(x))


-- ERROR:
File "XXXX", line 5
    x = var - (min(a,b,c)) - max(a,b,c))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:05:15) 
-- CODE:
a = int(input("Qual o valor de a?"))
b = int(input("Qual o valor de b?"))
c = int(input("Qual o valor de c?"))
var = a + b + c
x = (var - (min(a,b,c)) - max(a,b,c))

print(int(min(a,b,c)))
print(int(x))


-- OUTPUT:
-2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:05:40) 
-- CODE:
a = int(input("Qual o valor de a?"))
b = int(input("Qual o valor de b?"))
c = int(input("Qual o valor de c?"))
var = a + b + c
x = (var -(min(a,b,c)) - max(a,b,c))

print(int(min(a,b,c)))
print(int(x))


-- EXECUTION TIME:
0.124092
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:05:45) 
-- CODE:
a = int(input("Qual o valor de a?"))
b = int(input("Qual o valor de b?"))
c = int(input("Qual o valor de c?"))
var = a + b + c
x = (var -(min(a,b,c)) - max(a,b,c))

print(int(min(a,b,c)))
print(int(x))


-- OUTPUT:
-2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:07:45) 
-- CODE:
a = int(input("Qual o valor de a?"))
b = int(input("Qual o valor de b?"))
c = int(input("Qual o valor de c?"))

var = a + b + c
x = (var -(min(a,b,c)) - max(a,b,c))

print(int(min(a,b,c)))
print(int(x))


-- EXECUTION TIME:
0.200558
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:08:27) 
-- CODE:
a = int(input("Qual o valor de a?"))
b = int(input("Qual o valor de b?"))
c = int(input("Qual o valor de c?"))

var = a + b + c
x = (var -(min(a,b,c)) - max(a,b,c))

print(int(min(a,b,c)))
print(int(x))


-- EXECUTION TIME:
0.206145
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:15:06) 
-- CODE:
a = int(input("Qual o valor de a?"))
b = int(input("Qual o valor de b?"))
c = int(input("Qual o valor de c?"))

var = a + b + c
x = (var -(min(a,b,c)) - max(a,b,c))

print(int(min(a,b,c)))
print(int(x))
print(int(max(a,b,c)))


-- EXECUTION TIME:
0.132455
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
